--- a/registration.html
+++ b/registration.html
@@ -1294,35 +1294,35 @@
                             <h5 class="" >I.Family Composition</h5>
                         </div>
                         <div class="row">
-                            <label class="form-check-label col" for="">
+                            <label class="form-check-label col required" for="">
                                 <b>Name</b>
                             </label>
-                            <label class="form-check-label col" for="">
+                            <label class="form-check-label col required" for="">
                                 <b>Relationship</b>
                             </label>
-                            <label class="form-check-label col" for="">
+                            <label class="form-check-label col required" for="">
                                 <b>Age</b>
                             </label>
-                            <label class="form-check-label col" for="">
+                            <label class="form-check-label col required" for="">
                                 <b>Civil Status</b>
                             </label>
-                            <label class="form-check-label col" for="">
+                            <label class="form-check-label col required" for="">
                                 <b>Educational Attainment</b>
                             </label>
-                            <label class="form-check-label col" for="">
+                            <label class="form-check-label col required" for="">
                                 <b>Occupation</b>
                             </label>
-                            <label class="form-check-label col" for="">
+                            <label class="form-check-label col required" for="">
                                 <b>Monthly Income</b>
                             </label>
                             <label for="" class="col"></label>                    
                         </div>
                         <div class="family-list">
                             <div class="row family-data" id="duplicater">
-                                <input type="text" class="form-control col" name="family-composition-name[]" id="">
-                                <input type="text" class="form-control col" name="family-composition-relationship[]" id="">
-                                <input type="text" class="form-control col" name="family-composition-age[]" id="">
-                                <select class="col form-select" id="id-type" name="family-composition-civil-status[]" id="">
+                                <input type="text" class="form-control col" name="family-composition-name[]" id="" required>
+                                <input type="text" class="form-control col" name="family-composition-relationship[]" id="" required>
+                                <input type="text" class="form-control col" name="family-composition-age[]" id="" required>
+                                <select class="col form-select" id="id-type" name="family-composition-civil-status[]" id="" required>
                                     <option disabled selected value="">Please Select</option>
                                     <option value="Single">Single</option>
                                     <option value="Annulled">Annulled</option>
@@ -1330,9 +1330,9 @@
                                     <option value="Married">Married</option>
                                     <option value="Separated">Separated</option>
                                 </select>
-                                <input type="text" class="form-control col" name="family-composition-educ-attainment[]" id="">
-                                <input type="text" class="form-control col" name="family-composition-occupation[]" id="">
-                                <input type="text" class="form-control col" name="family-composition-monthly-income[]" id="">
+                                <input type="text" class="form-control col" name="family-composition-educ-attainment[]" id="" required>
+                                <input type="text" class="form-control col" name="family-composition-occupation[]" id="" required>
+                                <input type="text" class="form-control col" name="family-composition-monthly-income[]" id="" required>
                                 <button type="button" class="btn btn-danger delete col" onclick="deleteDiv(this);">Delete</button>
                             </div>
                         </div>
@@ -1409,43 +1409,38 @@
         <div class="registration-container" id="sr-citizen">
             <div class="container registration-containers mt-5 mb-5">
                 <form class="registration-form" action="includes/register.inc.php" method="post">
-                    <h1>Sr. Citizen</h1>
-                    <p>Instruction:</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam eaque, dignissimos blanditiis nesciunt quidem vel hic nobis, debitis provident distinctio accusantium odio in ipsa officiis nulla dicta eveniet aut accusamus.</p>
-                <!-- Radio Btn -->
+                    <center><h1>Aplikasyon sa Pagsapi</h1></center>
+                    <!-- Radio Btn -->
                     <div class="row align-items-start">
                         <div class="col form-group">
                             <div>
-                                <input class="form-check-input" type="radio" name="purpose" id="bago" value="Bago">
+                                <input class="form-check-input" type="radio" name="typeOfApplication" id="bago" value="Bago">
                                 <label class="" for="bago">Bago</label>
                             </div>    
+                            <div>
+                                <input class="form-control" type="text" id="IDnum" name="IDnum" placeholder="Numero ng ID (Bago)" disabled>
+                            </div>
                         </div>
                         <div class="col form-group">
                             <div>
-                                <input class="form-check-input" type="radio" name="purpose" id="lumipat" value="Lumipat">
+                                <input class="form-check-input" type="radio" name="typeOfApplication" id="lumipat" value="Lumipat">
                                 <label class="" for="lumipat">Lumipat</label>
                             </div>    
                         </div>
                         <div class="col form-group">
                             <div>
-                                <input class="form-check-input" type="radio" name="purpose" id="magpapalit" value="Magpapalit">
+                                <input class="form-check-input" type="radio" name="typeOfApplication" id="magpapalit" value="Magpapalit">
                                 <label class="" for="magpapalit">Magpapalit</label>
                             </div>    
                         </div>
                         <div class="col form-group">
                             <div>
-                                <input class="form-check-input" type="radio" name="purpose" id="nawala" value="Nawala">
+                                <input class="form-check-input" type="radio" name="typeOfApplication" id="nawala" value="Nawala">
                                 <label class="" for="nawala">Nawala</label>
+                                <input class="form-control" type="text" name="lostNumber" id="lostNumber" placeholder="Numero ng ID (Nawala)" disabled>
                             </div>    
                         </div>
                     </div>
-                        <!-- ID number -->
-                        <div class="row align-items-start">
-                            <div class="col form-group">
-                                <label class="" for="IDnum">Numero ng ID (Bago)</label>
-                                <input class="form-control" type="text" id="IDnum" name="IDnum" required>
-                            </div>
-                        </div>
                         <!-- Name -->
                         <div class="row align-items-start">
                             <div class="col form-group">
@@ -1461,15 +1456,15 @@
                                 <input class="form-control" type="text" id="LName" name="LName" required>
                             </div>
                             <div class="col form-group">
-                                <label class="" for="srCitizenSuffix">Suffix</label>
-                                <input class="form-control" type="text" id="srCitizenSuffix" name="srCitizenSuffix">
+                                <label class="" for="suffix">Suffix</label>
+                                <input class="form-control" type="text" id="suffix" name="suffix">
                             </div>
                         </div>
                         <!-- Address -->
                         <div class="row align-items-start">
                             <div class="col form-group">
-                                <label class="" for="srCitizenBarangay">Barangay</label>
-                                <select class="form-select" id="srCitizenBarangay" name="srCitizenBarangay">
+                                <label class="" for="barangay">Barangay</label>
+                                <select class="form-select" id="barangay" name="barangay" required>
                                     <option disabled selected value="">Please Select</option>
                                     <option value="Aplaya">Aplaya</option>
                                     <option value="Balibago">Balibago</option>
@@ -1492,30 +1487,30 @@
                                 </select>
                             </div>
                             <div class="col form-group">
-                                <label class="" for="tirahan">Tirahan (House No./Street/Subdivision)</label>
+                                <label class="" for="tirahan">Tirahan</label>
                                 <input class="form-control" type="text" id="tirahan" name="tirahan">
                             </div>
                         </div>
                         <!-- S/M/A -->
                         <div class="row align-items-start">
                             <div class="col">
-                                <label for="srCitizenSex">Sex (Kasarian noong Kapanganakan)</label>
-                                    <select class="form-select" id="srCitizenSex" name="srCitizenSex">
+                                <label for="sex">Sex (Kasarian noong Kapanganakan)</label>
+                                    <select class="form-select" id="sex" name="sex">
                                         <option disabled selected value="">Please Select</option>
-                                        <option value="male">Male</option>
-                                        <option value="female">Female</option>
+                                        <option value="Male">Male</option>
+                                        <option value="Female">Female</option>
                                     </select>
                             </div>
                             <div class="col">
                                 <label for="status">Marital Status</label>
                                 <div class="dropdown">
                                     <select class="form-select" id="status" name="status">
-                                        <option di  sabled selected value="">Please Select</option>
-                                        <option value="single">Single</option>
-                                        <option value="married">Married</option>
-                                        <option value="widowed">Widowed</option>
-                                        <option value="separated">Separated</option>
-                                        <option value="divorced">Divorced</option>
+                                        <option disabled selected value="">Please Select</option>
+                                        <option value="Single">Single</option>
+                                        <option value="Married">Married</option>
+                                        <option value="Widowed">Widowed</option>
+                                        <option value="Separated">Separated</option>
+                                        <option value="Divorced">Divorced</option>
                                     </select>
                                 </div>
                             </div>
@@ -1524,18 +1519,16 @@
                                 <input class="form-control" type="text" id="edad" name="edad" readonly>
                             </div>
                         </div>
-
                         <div class="row align-items-start">
                             <div class="col">
-                                <label for="srCitizenDOB">Date of Birth</label>
+                                <label for="dob">Date of Birth</label>
                                 <input class="form-control" type="date" id="srCitizenDOB" name="srCitizenDOB" required>
                             </div>
                             <div class="col form-group">
-                                <label class="" for="srCitizenBirthplace">Lugar ng Kapanganakan</label>
-                                <input class="form-control" type="text" id="srCitizenBirthplace" name="srCitizenBirthplace" required>
+                                <label class="" for="birthplace">Lugar ng Kapanganakan</label>
+                                <input class="form-control" type="text" id="birthplace" name="birthplace" required>
                             </div>
                         </div>
-
                         <div class="row align-items-start">
                             <div class="col form-group">
                                 <label class="" for="telepono">Telepono</label>
@@ -1554,19 +1547,19 @@
                         <div class="row align-items-start">
                             <div class="col">
                                 <label for="pensyon">May pensyon na tinatanggap</label>
-                                    <select class="form-select" id="pensyon" name="pensyon">
-                                        <option disabled selected value="">Please Select</option>
-                                        <option value="oo">Oo</option>
-                                        <option value="hindi">hindi</option>
-                                    </select>
+                                <select class="form-select" id="pensyon" name="pensyon">
+                                    <option disabled selected value="">Please Select</option>
+                                    <option value="Oo">Oo</option>
+                                    <option value="Wala">Wala</option>
+                                </select>
                             </div>
                             <div class="col form-group">
                                 <label class="" for="saan">Saan</label>
-                                <input class="form-control" type="text" id="saan" name="saan">
+                                <input class="form-control" type="text" id="saan" name="saan" disabled>
                             </div>
                             <div class="col form-group">
                                 <label class="" for="magkano">Magkano</label>
-                                <input class="form-control" type="text" id="magkano" name="magkano">
+                                <input class="form-control" type="text" id="magkano" name="magkano" disabled>
                             </div>
                         </div>
                         <!-- Asawa -->
@@ -1576,24 +1569,44 @@
                                 <input class="form-control" type="text" id="asawa" name="asawa">
                             </div>
                             <div class="col form-group">
-                                <label class="" for="edad-asawa">Edad</label>
+                                <label class="" for="edad-asawa">Edad ng Asawa</label>
                                 <input class="form-control" type="text" id="edad-asawa" name="edad-asawa">
                             </div>
                         </div>
-
                         <!-- Anak -->
                         <div class="row align-items-start">
                             <div class="col form-group">
-                                <label class="" for="anak">Ilan ang anak</label>
-                                <input class="form-control" type="text" id="anak" name="anak">
+                                <label class="" for="anak">Ilan ang anak (Ilagay ang 0 kung wala)</label>
+                                <input class="form-control" type="text" id="anak" name="anak" required>
                             </div>
                             <div class="col form-group">
                                 <label class="" for="kasama">Kasama sa bahay?</label>
                                 <input class="form-control" type="text" id="kasama" name="kasama">
                             </div>
                         </div>
-                        <!-- DITO MO ILAGAY YUNG LALAGAY MO ZETH -->
-                        <!-- AYOKO NGA -ZETH-->
+                        <div class="row align-items-start">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                    <th scope="col">Pangalan ng Anak</th>
+                                    <th scope="col">Edad</th>
+                                    <th scope="col">Tirahan</th>
+                                    <th scope="col">Telepono</th>
+                                    <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody id="new">
+                                    <tr id="duplicaterow">
+                                        <td><input class="form-control" type="text" name="relativeName[]"></td>
+                                        <td><input class="form-control" type="text" name="relativeAge[]"></td>
+                                        <td><input class="form-control" type="text" name="relativeAddress[]"></td>
+                                        <td><input class="form-control" type="text" name="relativeContact[]"></td>
+                                        <td><button type="button" class="btn btn-danger delete" onclick="deleteRow(this);">Delete</button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <button class="btn btn-success" type="button" id="add-family" onclick="updateFamily();">Add</button>
+                        </div>
                         <input class="mt-4 btn btn-lr btn-primary w-100" type="submit" value="Register" id="senior-citizen-register" name="senior-citizen-register">
                 </form>
             </div>
