--- a/index.html
+++ b/index.html
@@ -1,45 +1,118 @@
-<?php 
-  session_start();
-  $page = "index";
-  include('header.html');
-  if (isset($_SESSION['username'])) {
-      header("location: home.html");
-      exit();
-  }
+<?php
+	session_start();
+  	if (isset($_SESSION['username'])) {
+        header("location: home.html");
+        exit();
+    }
 ?>
-<section>
-  <div class="text-center mt-4 container" id="login-container" style="max-width: 40vh;">
-    <form action="includes/login.inc.php" method="post">
-      <h1 class="mt-4 mb-4 text-white">Login</h1>
-      <div class="mb-1">
-        <input type="text" class="form-control" id="UUsername" name="UUsername" placeholder="Username/Email..." required autofocus>
-      </div>
-      <div class="mb-1">
-        <input type="password" class="form-control" id="UPassword" name="UPassword" placeholder="Password..." required>
-      </div>
-      <div class="mb-1">
-        <input type="submit" id="submit" name="submit" class="btn btn-lg btn-primary w-100"/>
-      </div>
-      <div class="mb-3">
-        <a style='color: rgb(35, 69, 223); font-size: 15px' href="reset-password.html">Forgot Password?</a>
-      </div>
-      <hr>
-      <a href="sign-up.html" class="btn btn-success">Create Account</a>
-      <div class="mt-3 mb-3">
-        <?php
-          if (isset($_GET["error"])) {
-              if ($_GET["error"] == "wrongaccount"){
-                  echo "<p style='font-size: 15px'>The username or email you entered isn’t connected to an account. <a href='sign-up.html' style='color: red; font-size: 15px'>Create a new account.</a></p>";
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- JQuery for change div -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Google reCaptcha -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- Location api -->
+    <script src="https://f001.backblazeb2.com/file/buonzz-assets/jquery.ph-locations-v1.0.0.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
+    <script type="text/javascript" src="https://f001.backblazeb2.com/file/buonzz-assets/jquery.ph-locations.js"></script>
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <!-- External Javascript -->
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" defer src="includes/funtion.inc.js"></script>
+    <!-- Tab Icon -->
+    <link rel="shortcut icon" href="images/santarosa-logo.ico" type="image/x-icon">
+    <!-- Material Icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <!-- External CSS -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>CSWD</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-sm" style="background-image: linear-gradient(to right, #0f2d37, #d70080);">
+      <div class="container-fluid text-white">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="navbar-brand" href="index.html">
+                <img src="images/ABAlogo.png" alt="Santa Rosa Logo" width="55" height="45"/>
+              </a>
+            </li>
+            <li class="nav-item mb-0">
+              <h3>SANTAROSA CSWD</h3> 
+            </li>
+            <?php
+              require_once 'includes/dbh.inc.php';
+              require_once 'includes/functions.inc.php';
+              if (isset($_SESSION['username'])) {
+                echo '<li class="nav-item ms-2"><h3>Welcome '; echo ($_SESSION["name"]); echo '</h3></li>';
               }
-              else if ($_GET["error"] == "wrongpassword"){
-                  echo "<p>The password you’ve entered is incorrect. <a style='color: red; font-size: 15px' href='reset-password.html'>Forgot Password?</a></p>";
-              }   
+            ?>
+          </ul>
+          </div>  
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="text-white" href="index.html">Home</a></li>
+          <li class="nav-item ms-2"><a class="text-white" href="contact-us.html">Contact Us</a></li>
+        <?php
+          if (isset($_SESSION['username'])) {
+            $username = $_SESSION['username'];
+            echo '<li class="nav-item ms-2"><a class="text-white" href="includes/logout.inc.php">Log Out</a></li>';
           }
-      ?>
+        ?>
+        </ul>
       </div>
-    </form>
-  </div>
-</section>
+    </nav>
+	<section>
+	<div class="text-center mt-4 container" id="login-container" style="max-width: 40vh;">
+		<form action="includes/login.inc.php" method="post">
+		<h1 class="mt-4 mb-4 text-white">Login</h1>
+		<div class="mb-1">
+			<input type="text" class="form-control" id="UUsername" name="UUsername" placeholder="Username/Email..." required autofocus>
+		</div>
+		<div class="mb-1">
+			<input type="password" class="form-control" id="UPassword" name="UPassword" placeholder="Password..." required>
+		</div>
+		<div class="mb-1">
+			<input type="submit" id="submit" name="submit" class="btn btn-lg btn-primary w-100"/>
+		</div>
+		<div class="mb-3">
+			<a style='color: rgb(35, 69, 223); font-size: 15px' href="reset-password.html">Forgot Password?</a>
+		</div>
+		<hr>
+		<a href="sign-up.html" class="btn btn-success">Create Account</a>
+		<div class="mt-3 mb-3">
+			<?php
+			if (isset($_GET["error"])) {
+				if ($_GET["error"] == "wrongaccount"){
+					echo "<p style='font-size: 15px'>The username or email you entered isn’t connected to an account. <a href='sign-up.html' style='color: red; font-size: 15px'>Create a new account.</a></p>";
+				}
+				else if ($_GET["error"] == "wrongpassword"){
+					echo "<p>The password you’ve entered is incorrect. <a style='color: red; font-size: 15px' href='reset-password.html'>Forgot Password?</a></p>";
+				}   
+			}
+		?>
+		</div>
+		</form>
+	</div>
+	</section>
 <?php
   if (isset($_GET["username"])) {
       $username = $_GET['username'];
