--- a/reset-password.html
+++ b/reset-password.html
@@ -1,23 +1,75 @@
-<?php 
-  session_start();
-  $page = "index";
-  include('header.html');
-  if (isset($_SESSION['username'])) {
-      header("location: home.html");
-      exit();
-  }
-?>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- JQuery for change div -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Google reCaptcha -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- Location api -->
+    <script src="https://f001.backblazeb2.com/file/buonzz-assets/jquery.ph-locations-v1.0.0.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
+    <script type="text/javascript" src="https://f001.backblazeb2.com/file/buonzz-assets/jquery.ph-locations.js"></script>
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <!-- External Javascript -->
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" defer src="includes/funtion.inc.js"></script>
+    <!-- Tab Icon -->
+    <link rel="shortcut icon" href="images/santarosa-logo.ico" type="image/x-icon">
+    <!-- Material Icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <!-- External CSS -->
+    <link rel="stylesheet" href="css/style.css">
 
-<section>
-    <div class="container" style="max-width: 60vh;">
-        <h1>Reset your Password</h1>
-        <p>Input your email you use to register this account to get the password reset link.</p>
-        <form action="reset-request.inc.php" method="post">
-            <input class="form-control" type="email" placeholder="Input your Email Address...">
-            <input class="btn btn-primary" type="password-reset-email-submit" value="Submit">
-        </form>
-    </div>
-</section>
+    <title>CSWD</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-sm" style="background-image: linear-gradient(to right, #0f2d37, #d70080);">
+      <div class="container-fluid text-white">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="navbar-brand" href="index.html">
+                <img src="images/ABAlogo.png" alt="Santa Rosa Logo" width="55" height="45"/>
+              </a>
+            </li>
+            <li class="nav-item mb-0">
+              <h3>SANTAROSA CSWD</h3> 
+            </li>
+          </ul>
+          </div>  
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="text-white" href="index.html">Home</a></li>
+          <li class="nav-item ms-2"><a class="text-white" href="contact-us.html">Contact Us</a></li>
+        </ul>
+      </div>
+    </nav>
+    <section>
+        <div class="container" style="max-width: 60vh;">
+            <h1>Reset your Password</h1>
+            <p>Input your email you use to register this account to get the password reset link.</p>
+            <form action="reset-request.inc.php" method="post">
+                <input class="form-control" type="email" placeholder="Input your Email Address...">
+                <input class="btn btn-primary" type="password-reset-email-submit" value="Submit">
+            </form>
+        </div>
+    </section>
 
 <?php 
   include('footer.html');
