--- a/sign-up.html
+++ b/sign-up.html
@@ -2,6 +2,10 @@
   session_start();
   $page = "sign_up";
   include('header.html');
+  	if (isset($_SESSION['username'])) {
+        header("location: home.html");
+        exit();
+    }
 ?>
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
   <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
